--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "^10.4.19",
+    "cookies-next": "^4.1.1",
     "date-fns": "^3.6.0",
     "geist": "1.3.0",
     "gray-matter": "^4.0.3",
