--- a/package.json
+++ b/package.json
@@ -6,25 +6,31 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fec/remark-a11y-emoji": "^4.0.2",
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "^10.4.19",
+    "bright": "^0.8.5",
     "cookies-next": "^4.1.1",
     "date-fns": "^3.6.0",
     "geist": "1.3.0",
     "gray-matter": "^4.0.3",
     "install": "^0.13.0",
     "next": "14.2.3",
-    "next-mdx-remote": "^4.4.1",
+    "next-mdx-remote": "0.0.0-canary-20240321205249",
     "next-themes": "^0.3.0",
     "postcss": "^8.4.38",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "reading-duration": "^1.1.2",
     "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-toc": "^9.0.0",
     "sugar-high": "^0.6.1",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5"
