--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
-    "@vercel/analytics": "^1.2.2",
+    "@vercel/analytics": "^1.3.0",
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "^10.4.19",
     "bright": "^0.8.5",
-    "cookies-next": "^4.1.1",
+    "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
     "geist": "1.3.0",
     "gray-matter": "^4.0.3",
     "install": "^0.13.0",
     "next": "14.2.3",
-    "next-mdx-remote": "0.0.0-canary-20240321205249",
+    "next-mdx-remote": "5.0.0",
     "next-themes": "^0.3.0",
     "postcss": "^8.4.38",
     "react": "18.3.1",
